@@ -48,67 +48,7 @@ __stdlib_exit(void)
 {
 	ENTER();
 
-	#ifdef __MEM_DEBUG
-	{
-		kprintf("[%s] %ld bytes still allocated upon exit, maximum of %ld bytes allocated at a time.\n",
-			__program_name,__current_memory_allocated,__maximum_memory_allocated);
-
-		kprintf("[%s] %ld chunks of memory still allocated upon exit, maximum of %ld chunks allocated at a time.\n",
-			__program_name,__current_num_memory_chunks_allocated,__maximum_num_memory_chunks_allocated);
-
-		__check_memory_allocations(__FILE__,__LINE__);
-	}
-	#endif /* __MEM_DEBUG */
-
-	/* Clean this up, too, just to be safe. */
-	NewList((struct List *)&__alloca_memory_list);
-
-	#if defined(__MEM_DEBUG)
-	{
-		__never_free = FALSE;
-
-		if(__memory_list.mlh_Head != NULL)
-		{
-			while(NOT IsListEmpty((struct List *)&__memory_list))
-			{
-				((struct MemoryNode *)__memory_list.mlh_Head)->mn_AlreadyFree = FALSE;
-
-				__free_memory_node((struct MemoryNode *)__memory_list.mlh_Head,__FILE__,__LINE__);
-			}
-		}
-	}
-	#endif /* __MEM_DEBUG */
-
-	#if defined(__USE_MEM_TREES) && defined(__MEM_DEBUG)
-	{
-		__initialize_red_black_tree(&__memory_tree);
-	}
-	#endif /* __USE_MEM_TREES && __MEM_DEBUG */
-
-	if(__memory_pool != NULL)
-	{
-		NewList((struct List *)&__memory_list);
-
-		DeletePool(__memory_pool);
-		__memory_pool = NULL;
-	}
-	else
-	{
-		if(__memory_list.mlh_Head != NULL)
-		{
-			#ifdef __MEM_DEBUG
-			{
-				while(NOT IsListEmpty((struct List *)&__memory_list))
-					__free_memory_node((struct MemoryNode *)__memory_list.mlh_Head,__FILE__,__LINE__);
-			}
-			#else
-			{
-				while(NOT IsListEmpty((struct List *)&__memory_list))
-					__free_memory_node((struct MemoryNode *)__memory_list.mlh_Head,NULL,0);
-			}
-			#endif /* __MEM_DEBUG */
-		}
-	}
+	__memory_exit();
 
 	if(__free_program_name && __program_name != NULL)
 	{
@@ -126,17 +66,7 @@ __stdlib_init(void)
 {
 	ENTER();
 
-	#if defined(__USE_MEM_TREES) && defined(__MEM_DEBUG)
-	{
-		__initialize_red_black_tree(&__memory_tree);
-	}
-	#endif /* __USE_MEM_TREES && __MEM_DEBUG */
-
-	NewList((struct List *)&__memory_list);
-	NewList((struct List *)&__alloca_memory_list);
-
-	if(((struct Library *)SysBase)->lib_Version >= 39)
-		__memory_pool = CreatePool(MEMF_ANY,(ULONG)__default_pool_size,(ULONG)__default_puddle_size);
+	__memory_init();
 
 	RETURN(OK);
 	return(OK);
