@@ -48,6 +48,11 @@
 
 /****************************************************************************/
 
+/* NOTE: for Knuth's algorithm below the seed must not be zero. */
+unsigned __random_seed = 1;
+
+/****************************************************************************/
+
 int
 rand(void)
 {
