@@ -103,6 +103,18 @@ overflow:                                                                 \n\
 
 /****************************************************************************/
 
+UBYTE * __stk_limit;
+
+/****************************************************************************/
+
+#if defined(__SASC)
+
+UBYTE * __base;
+
+#endif /* __SASC */
+
+/****************************************************************************/
+
 int
 __stk_init(void)
 {
