@@ -272,6 +272,11 @@ endlp:
 
 /****************************************************************************/
 
+UBYTE * __stk_limit;
+ULONG __stk_size;
+
+/****************************************************************************/
+
 int
 __stk_init(void)
 {
